feat: enhance property operations workflows